--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Angular Js</title>
 </head>
 <body>
-	<h1>Angular Js Start hello starting browser sync connected</h1>
+	<h1>Angular Js Start hello starting browser sync connected: hello editor</h1>
 </body>
 </html>
